  * debian/watch:
    + Tracking latest branch now.
  * debian/copyright:
    + Completly rewritten copyright file in DEP5 format based on
      moonlight 2.0's debian/copyright written by Jo Shields with minor
      modifications.
    + Updated debian/* copyright.
  * debian/rules:
    + Dropped build-arch/indep split as we needed to build 90% of the classlib
      for the test suite anyhow.

 -- Mirco Bauer <meebey@debian.org>  Sun, 06 Jun 2010 17:29:50 +0200

mono (2.4.4~svn151842-2) unstable; urgency=low

  [ Mirco Bauer ]
  * debian/control:
    + Changed section of libmono-dev back to cli-mono.
    + Added misc:Depends to mono-dbg to please lintian.
  * debian/mono-devel.install:
    + Added makecert.
  * mcs/class/System.Web/System.Web.UI.WebControls/TableRow.cs
    mcs/class/System.Web/System.Web.UI.WebControls/TableRowCollection.cs:
    + Reverted dpatch changes that were done accidentally.
  * Cherry-picked debian/patches/fix_csharp_attach_param
    mcs/tools/csharp/repl.cs:
    + Fixed NRE when using the attach parameter of csharp.

  [ Iain Lane ]
  * debian/update-monodoc: Check whether monodoc-browser is configured before
    generating the search index in the trigger. Previously the lack of this
    caused uninstallability due to monodoc not being able to find GTK# in the
    GAC. (Closes: #575803)

  [ Jo Shields ]
  * debian/patches/mono-arm-thumb2-ftbfs.dpatch:
    + Use GCC atomic built-ins to prevent FTBFS on ARM with Thumb2 (Thanks to
      Alexander Sack <asac@ubuntu.com>)
  * debian/patches/mono-thumb2-jit-blx.dpatch:
    + Assorted JIT fixes for ARM (Thanks to Alexander Sack <asac@ubuntu.com>)
  * debian/patches/arm-cpuinfo-parsing.dpatch:
    + Smarter CPU detection, to allow Mono to run properly under QEMU without
      asserting and dying (Thanks to Loïc Minier <loic.minier@ubuntu.com>)

 -- Mirco Bauer <meebey@debian.org>  Sun, 25 Apr 2010 14:56:28 +0200

mono (2.4.4~svn151842-1) unstable; urgency=medium

  [ Jo Shields ]